# my-portfolio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requiremenst.txt
.github/workflows/: troel-ops-kit-ci.yml
Desktop/Portfolio/my-portfolio/: .gitignore
Desktop/Portfolio/my-portfolio/projects/scania-ml/: README.md
Desktop/Portfolio/my-portfolio/projects/scania-ml/charts/: .gitkeep
Desktop/Portfolio/my-portfolio/projects/scania-ml/data/: .gitkeep
Desktop/Portfolio/my-portfolio/projects/scania-ml/notebooks/: 00_data_intake.ipynb
TROEL OPS Kit/: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mapping.example.json  pyproject.toml
TROEL OPS Kit/.github/workflows/: ci.yml
TROEL OPS Kit/data/demo/: catalog.csv  sales.csv  stock.csv
TROEL OPS Kit/docs/: ARCHITECTURE.md  CASE_STUDY.md  RECRUITER.md
TROEL OPS Kit/src/troel_ops_kit/: __init__.py  alerts.py  cli.py  contracts.py  demo.py  io.py  kpis.py  logging_config.py  pipeline.py  report.py  validate.py
TROEL OPS Kit/src/troel_ops_kit/templates/: report.md.j2
TROEL OPS Kit/tests/: test_end_to_end.py  test_kpis.py
docs/: CASE_STUDY.md
projects/agent-ai-streamlit/: README.md  app.py
projects/autogluon-demand-forecast/: README.md
projects/pytorch-time-series/: README.md  notebook.ipynb
projects/scikit-learn-basics/: README.md  notebook.ipynb
src/troel_ops_kit/: alerts.py  contracts.py  demo.py  pipeline.py  report.py
tests/: test_kpis.py
