[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "troel-ops-kit"
version = "0.1.0"
description = "TROEL OPS Kit: pragmatic supply chain KPI and alerting CLI with synthetic demo data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="Christophe TROËL", email="christophe.troel@hotmail.fr"}]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "duckdb>=1.1",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "python-dateutil>=2.9",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
pdf = ["weasyprint>=61"]
plots = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8", "pandas-stubs>=2.2.0.240218"]

[project.scripts]
troel-ops = "troel_ops_kit.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/troel_ops_kit"]

[tool.mypy]
python_version = "3.11"
packages = ["troel_ops_kit"]
strict = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["weasyprint"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
